--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,17 @@ services:
     networks:
       - elastic
 
+  kibana:
+    image: docker.elastic.co/kibana/kibana:$ELK_TAG
+    volumes:
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml
+    ports:
+      - 5601:5601
+    networks:
+      - elastic
+    depends_on:
+      - elasticsearch
+
 volumes:
   es-data:
     driver: local
