--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -10,3 +10,8 @@ node.name: elasticsearch
 # see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
 discovery.type: single-node
 
+## X-Pack settings
+## see https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-xpack.html
+#
+xpack.license.self_generated.type: trial
+xpack.security.enabled: true
