--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -6,6 +6,10 @@ server.host: 0.0.0.0
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
 
+## Logs output (True for JSON)
+#
+logging.json: false
+
 ## X-Pack security credentials
 #
 elasticsearch.username: elastic
