--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,7 +4,6 @@
 server.name: kibana
 server.host: 0.0.0.0
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
-monitoring.ui.container.elasticsearch.enabled: true
 
 ## Logs output (True for JSON)
 #
@@ -13,4 +12,4 @@ logging.json: false
 ## X-Pack security credentials
 #
 elasticsearch.username: elastic
-elasticsearch.password: $ELASTIC_PASSWORD
+elasticsearch.password: ${ELASTIC_PASSWORD}
