--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -3,7 +3,7 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
-elasticsearch.hosts: [ "http://elasticsearch:9200" ]
+elasticsearch.hosts: [ "https://elasticsearch:9200" ]
 
 ## Logs output (True for JSON)
 #
@@ -13,3 +13,13 @@ logging.json: false
 #
 elasticsearch.username: elastic
 elasticsearch.password: ${ELASTIC_PASSWORD}
+
+##
+## TLS configuration
+## See instructions from README to enable.
+##
+
+## Communications between Kibana and Elasticsearch
+## see https://www.elastic.co/guide/en/kibana/current/configuring-tls.html#configuring-tls-kib-es
+#
+elasticsearch.ssl.certificateAuthorities: [ "config/elasticsearch-ca.pem" ]
