--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -35,3 +35,22 @@ xpack.security.transport.ssl.truststore.path: elasticsearch.p12
 #
 xpack.security.http.ssl.enabled: true
 xpack.security.http.ssl.keystore.path: http.p12
+
+## OIDC
+## https://www.elastic.co/guide/en/elasticsearch/reference/current/oidc-guide.html#oidc-elasticsearch-authentication
+
+# xpack.security.authc.token.enabled: true
+
+# xpack.security.authc.realms.oidc.oidc1:
+#   order: 2
+#   rp.client_id: "the_client_id"
+#   rp.response_type: code
+#   rp.redirect_uri: "http://localhost:5601/api/security/oidc/callback"
+#   op.issuer: "https://op.example.org"
+#   op.authorization_endpoint: "https://op.example.org/oauth2/v1/authorize"
+#   op.token_endpoint: "https://op.example.org/oauth2/v1/token"
+#   op.jwkset_path: oidc/jwkset.json
+#   op.userinfo_endpoint: "https://op.example.org/oauth2/v1/userinfo"
+#   op.endsession_endpoint: "https://op.example.org/oauth2/v1/logout"
+#   rp.post_logout_redirect_uri: "http://localhost:5601/security/logged_out"
+#   claims.principal: email
